Table configuraciones {
  id int [pk, increment] // Primary key
  nombre varchar
  descripcion varchar
  direccion varchar
  telefono varchar
  divisa varchar
  correo_electronico varchar
  web varchar
  logo varchar
}

Table gestiones {
  id int [pk, increment] // Primary key
  nombre varchar
}

Table periodos {
  id int [pk, increment] // Primary key
  nombre varchar
  gestion_id int [ref: > gestiones.id]
}

Table niveles {
  id int [pk, increment] // Primary key
  nombre varchar
}

Table grados {
  id int [pk, increment] // Primary key
  nombre varchar
  nivel_id int [ref: > niveles.id]
}

Table turnos {
  id int [pk, increment] // Primary key
  nombre varchar
}
